fix: fixes the menu on mobile/small screens

--- a/assets/sass/_nav.scss
+++ b/assets/sass/_nav.scss
@@ -18,7 +18,7 @@ nav{
       padding-bottom: 1rem;
       border: 0;
       background-color: #fff;
-      @media screen and (max-width:840px) {
+      @media screen and (max-width:1420px) {
         display: block;
       }
       .menu-bar{
@@ -29,11 +29,11 @@ nav{
     }
     .right{
       padding-right: 1rem;
-      @media screen and (max-width:840px) {
+      @media screen and (max-width:1420px) {
         display: none;
       }
     }
-  }  
+  }
 }
 
 .menu-btn_close{
@@ -51,7 +51,7 @@ nav{
   &.active{
     display: flex !important;
   }
-  @media screen and (max-width:840px) {
+  @media screen and (max-width:1420px) {
     background-color: #ddd;
     position: absolute;
     width: 100%;
@@ -74,6 +74,51 @@ nav{
         list-style-type: none;
         a{
           text-decoration: none;
+        }
+      }
+    }
+
+    .nav-dropdown {
+      width: 100%;
+      text-align: center;
+
+      .nav-dropdown-header {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 0.5rem;
+      }
+
+      .accordion-toggle {
+        background: none;
+        border: none;
+        cursor: pointer;
+        font-size: 12px;
+        padding: 0.25rem;
+        color: #000;
+        transition: transform 0.2s ease;
+        line-height: 1;
+
+        &.open {
+          transform: rotate(180deg);
+        }
+      }
+
+      .nav-dropdown-menu {
+        display: none;
+        flex-direction: column;
+        gap: 1rem;
+        margin-top: 1rem;
+
+        &.open {
+          display: flex;
+        }
+
+        li {
+          a {
+            font-size: 15px;
+            opacity: 0.8;
+          }
         }
       }
     }
